# haskeline-reader

./: .hlint.yaml  flake.nix  haskeline.cabal  hie.yaml
.github/workflows/: ci.yaml
System/Console/: Haskeline.hs
System/Console/Haskeline/: Backend.hs  Command.hs  Completion.hs  Emacs.hs  History.hs  IO.hs  InputT.hs  Internal.hs  Key.hs  LineState.hs  Monads.hs  Prefs.hs  Recover.hs  RunCommand.hs  Term.hs  Vi.hs
System/Console/Haskeline/Backend/: DumbTerm.hs  Terminfo.hs  WCWidth.hs
System/Console/Haskeline/Backend/Posix/: Encoder.hs
System/Console/Haskeline/Backend/Win32/: Echo.hs
System/Console/Haskeline/Command/: Completion.hs  History.hs  KillRing.hs  Undo.hs
examples/: Test.hs
examples/export/: HaskelineExport.hs
tests/: Pty.hs  RunTTY.hs  Unit.hs
